vulkan-loader (1.3.246.1-1) UNRELEASED; urgency=medium

  * New upstream release.

 -- Timo Aaltonen <tjaalton@debian.org>  Wed, 24 May 2023 15:04:14 +0300

vulkan-loader (1.3.239.0-1) unstable; urgency=medium

  * New upstream release. (Closes: #1026768)
  * fix-headers-install.diff: Refreshed.
  * symbols: Updated.

 -- Timo Aaltonen <tjaalton@debian.org>  Mon, 06 Feb 2023 10:41:08 +0200

vulkan-loader (1.3.236.0-2) unstable; urgency=medium

  * Make -dev multiarch-friendly again by installing cmake files to
   libdir. (Closes: #1029194)

 -- Timo Aaltonen <tjaalton@debian.org>  Sat, 21 Jan 2023 18:39:02 +0200

vulkan-loader (1.3.236.0-1) unstable; urgency=medium

  [ Timo Aaltonen ]
  * New upstream release.
  * Refresh vulkan-headers to 1.3.236.0

  [ Dylan Aïssi ]
  * Fix use of vulkan-headers in debian/rules

 -- Timo Aaltonen <tjaalton@debian.org>  Tue, 17 Jan 2023 19:58:36 +0200

vulkan-loader (1.3.231.1-1) unstable; urgency=medium

  * New upstream release.

 -- Timo Aaltonen <tjaalton@debian.org>  Tue, 08 Nov 2022 10:20:32 +0200

vulkan-loader (1.3.224.0-1) unstable; urgency=medium

  * New upstream release.

 -- Timo Aaltonen <tjaalton@debian.org>  Thu, 25 Aug 2022 18:28:28 +0300

vulkan-loader (1.3.216.0-1) unstable; urgency=medium

  * New upstream release.

 -- Timo Aaltonen <tjaalton@debian.org>  Wed, 22 Jun 2022 12:39:19 +0300

vulkan-loader (1.3.211.0-1) unstable; urgency=medium

  [ Timo Aaltonen ]
  * New upstream release.
  * sync_headers.sh: Fix checking the version.
  * patches: Dropped, upstream.

  [ Simon McVittie ]
  * tests: Exclude precompiled binary objects from .orig tarball
  * d/copyright: Update
  * Regenerate loader/generated/ during build.
    Thanks to Helmut Grohne (Closes: #981362)
  * d/rules: Delete another __pycache__ directory
  * d/libvulkan1.symbols: Expect i386 to be treated as an x86 architecture

 -- Timo Aaltonen <tjaalton@debian.org>  Wed, 25 May 2022 11:34:17 +0300
